kube/kustomize/overlays/prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: i046364-eks-hello
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: ${cluster-host}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: i046364-eks-hello
                port:
                  number: 80
  tls:
    - hosts:
        - ${cluster-host}
